# GPTflix

./: .gitignore  README.md  api_request_parallel_processor.py  convert_jsonl_with_embeddings_to_csv.py  generate_index_mpst.py  generate_index_wikipedia_movies.py  make_jsonl_for_requests_mpst.py  notes.txt  pyproject.toml  requirements.txt  upload_to_pinecone.py
chat/: .env  main.py  requirements.txt
src/: check_results.py  p1.generate_index_mpst.py  p2.make_jsonl_for_requests_mpst.py  p3.api_request_parallel_processor.py  p4.convert_jsonl_with_embeddings_to_csv.py  p5.upload_to_pinecone.py
src/other/: generate_index_wikipedia_movies.py
