[tool.poetry]
name = "DKVgpt"
version = "0.1.0"
description = "Accurate answers about DKV"
authors = ["stephan sturges"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<4.0.0"
streamlit = "^1.17.0"
openai = "^0.27.0"
tiktoken = "0.2.0"
streamlit-chat = "0.0.2.1"
pinecone-client = "2.2.1"



[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
python-dotenv = "^0.21.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Secrets to be set from streamlit : Pinecone API key and OpenAI API Key
[API_KEYS]
